add first improvements